RESOLVED FIXED 272898
REGRESSION (277282@main): [macOS] Writing suggestions may incorrectly render at the end of an editable element
https://bugs.webkit.org/show_bug.cgi?id=272898
Summary REGRESSION (277282@main): [macOS] Writing suggestions may incorrectly render ...
Wenson Hsieh
Reported 2024-04-18 09:11:17 PDT
Attachments
Wenson Hsieh
Comment 1 2024-04-18 10:38:36 PDT
EWS
Comment 2 2024-04-19 13:34:05 PDT
Committed 277756@main (b4d7445ce5f4): <https://commits.webkit.org/277756@main> Reviewed commits have been landed. Closing PR #27454 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.