Tools/TestRunnerShared/UIScriptContext/UIScriptController.h
@@ -135,7 +135,7 @@ public:
     virtual bool isWindowContentViewFirstResponder() const { notImplemented(); return false; }
     virtual bool isWebContentFirstResponder() const { notImplemented(); return false; }
 
-    virtual void setInlinePrediction(JSStringRef) { notImplemented(); }
+    virtual void setInlinePrediction(JSStringRef, unsigned) { notImplemented(); }
     virtual void acceptInlinePrediction() { notImplemented(); }
 
     virtual void removeViewFromWindow(JSValueRef) { notImplemented(); }
